# lhasa-app

./: .dockerignore  .env.local  .env.production  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.frontend  README.md  constants.tsx  docker-compose.yaml  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: countries.json  layout.tsx  page.tsx
backend/: Dockerfile  pyproject.toml
backend/api/: index.py
backend/app/: main.py
backend/lhasa/: __init__.py  download.py  forecast.py
frontend/: .env  .prettierrc.json  Dockerfile  colors.yaml  constants.tsx  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx  theme.tsx
frontend/app/about/: page.tsx
frontend/app/api/: countries.ts  download.ts  files.tsx  forecast.ts
frontend/app/components/: BackendStatusIndicator.tsx  Footer.tsx  Header.tsx  Map.tsx  MapLegend.tsx  Statistics.tsx  TextHighlighter.tsx  ThemeSwitcher.tsx
frontend/app/contexts/: ThemeContext.tsx
lhasa/: __init__.py  download.py  forecast.py
